PMMCompiler/src/parser/PmmParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

/* El contenido va a ser copiado en PmmParser */

import ast.*;
import ast.definitions.FunctionDefinition;
import ast.definitions.VariableDefinition;
import ast.expressions.*;
import ast.statements.*;
import ast.types.*;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.ArrayList;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PmmParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, TRASH = 38,
            COMMENT = 39, ID = 40, INT_CONSTANT = 41, CHAR_CONSTANT = 42, REAL_CONSTANT = 43;
    public static final int
            RULE_program = 0, RULE_main = 1, RULE_statement = 2, RULE_expression = 3,
            RULE_type = 4, RULE_structFields = 5, RULE_variableDefinition = 6, RULE_functionDefinition = 7,
            RULE_functionInvocation = 8, RULE_body = 9, RULE_expressions = 10, RULE_params = 11,
            RULE_ids = 12;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public PmmParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "main", "statement", "expression", "type", "structFields",
                "variableDefinition", "functionDefinition", "functionInvocation", "body",
                "expressions", "params", "ids"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "';'", "'def'", "'main'", "'('", "')'", "':'", "'{'", "'}'", "'print'",
                "'input'", "'return'", "'='", "'if'", "'else'", "'while'", "'['", "']'",
                "'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'=='", "'!='", "'>'",
                "'>='", "'<'", "'<='", "'||'", "'&&'", "'char'", "'double'", "'int'",
                "'struct'", "','"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, "TRASH", "COMMENT", "ID", "INT_CONSTANT", "CHAR_CONSTANT",
                "REAL_CONSTANT"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "java-escape";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(35);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            setState(33);
                            _errHandler.sync(this);
                            switch (_input.LA(1)) {
                                case ID: {
                                    setState(26);
                                    ((ProgramContext) _localctx).vd = variableDefinition();
                                    setState(27);
                                    match(T__0);
                                    _localctx.definitions.addAll(((ProgramContext) _localctx).vd.ast);
                                }
                                break;
                                case T__1: {
                                    setState(30);
                                    ((ProgramContext) _localctx).fd = functionDefinition();
                                    _localctx.definitions.add(((ProgramContext) _localctx).fd.ast);
                                }
                                break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                        }
                    }
                    setState(37);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 1, _ctx);
                }
                setState(38);
                ((ProgramContext) _localctx).m = main();
                setState(39);
                match(EOF);

                _localctx.definitions.add(((ProgramContext) _localctx).m.ast);
                ((ProgramContext) _localctx).ast = new Program(0, 0, _localctx.definitions);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MainContext main() throws RecognitionException {
        MainContext _localctx = new MainContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_main);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(42);
                ((MainContext) _localctx).T = match(T__1);
                setState(43);
                match(T__2);
                setState(44);
                match(T__3);
                setState(45);
                match(T__4);
                setState(46);
                match(T__5);
                setState(47);
                match(T__6);
                setState(54);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(48);
                                ((MainContext) _localctx).vd = variableDefinition();
                                setState(49);
                                match(T__0);
                                _localctx.varDefinitions.addAll(((MainContext) _localctx).vd.ast);
                            }
                        }
                    }
                    setState(56);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
                setState(62);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((_la) & ~0x3f) == 0 && ((1L << _la) & 16492676034064L) != 0) {
                    {
                        {
                            setState(57);
                            ((MainContext) _localctx).st1 = statement();
                            _localctx.statements.addAll(((MainContext) _localctx).st1.ast);
                        }
                    }
                    setState(64);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(65);
                match(T__7);

                ((MainContext) _localctx).ast = new ast.definitions.FunctionDefinition(((MainContext) _localctx).T.getLine(), ((MainContext) _localctx).T.getCharPositionInLine() + 1,
                        new FunctionType(((MainContext) _localctx).T.getLine(), ((MainContext) _localctx).T.getCharPositionInLine() + 1,
                                new ArrayList<VariableDefinition>(), VoidType.getInstance()), "main", _localctx.varDefinitions, _localctx.statements);

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_statement);
        try {
            setState(112);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 5, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(68);
                    ((StatementContext) _localctx).T = match(T__8);
                    setState(69);
                    ((StatementContext) _localctx).ex = expressions();
                    setState(70);
                    match(T__0);

                    for (Expression expression : ((StatementContext) _localctx).ex.ast) {
                        _localctx.ast.add(new Print(((StatementContext) _localctx).T.getLine(), expression.getColumn(), expression));
                    }

                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(73);
                    ((StatementContext) _localctx).T = match(T__9);
                    setState(74);
                    ((StatementContext) _localctx).ex = expressions();
                    setState(75);
                    match(T__0);

                    for (Expression expression : ((StatementContext) _localctx).ex.ast) {
                        _localctx.ast.add(new Input(((StatementContext) _localctx).T.getLine(), expression.getColumn(), expression));
                    }

                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(78);
                    match(T__10);
                    setState(79);
                    ((StatementContext) _localctx).ex1 = expression(0);
                    setState(80);
                    match(T__0);

                    _localctx.ast.add(new Return(((StatementContext) _localctx).ex1.ast.getLine(), ((StatementContext) _localctx).ex1.ast.getColumn(), ((StatementContext) _localctx).ex1.ast));

                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(83);
                    ((StatementContext) _localctx).ex1 = expression(0);
                    setState(84);
                    match(T__11);
                    setState(85);
                    ((StatementContext) _localctx).ex2 = expression(0);
                    setState(86);
                    match(T__0);

                    _localctx.ast.add(new Assignment(((StatementContext) _localctx).ex1.ast.getLine(), ((StatementContext) _localctx).ex1.ast.getColumn(), ((StatementContext) _localctx).ex1.ast, ((StatementContext) _localctx).ex2.ast));

                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(89);
                    ((StatementContext) _localctx).T = match(T__12);
                    setState(90);
                    ((StatementContext) _localctx).ex1 = expression(0);
                    setState(91);
                    match(T__5);
                    setState(92);
                    ((StatementContext) _localctx).b1 = body();
                    setState(98);
                    _errHandler.sync(this);
                    switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                        case 1: {
                            setState(93);
                            match(T__13);
                            setState(94);
                            match(T__5);
                            setState(95);
                            ((StatementContext) _localctx).b2 = body();
                            ((StatementContext) _localctx).elseBody = ((StatementContext) _localctx).b2.ast;
                        }
                        break;
                    }

                    _localctx.ast.add(new IfElse(((StatementContext) _localctx).T.getLine(), ((StatementContext) _localctx).T.getCharPositionInLine() + 1, ((StatementContext) _localctx).ex1.ast, ((StatementContext) _localctx).b1.ast, _localctx.elseBody));

                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(102);
                    ((StatementContext) _localctx).T = match(T__14);
                    setState(103);
                    ((StatementContext) _localctx).ex1 = expression(0);
                    setState(104);
                    match(T__5);
                    setState(105);
                    ((StatementContext) _localctx).b1 = body();

                    _localctx.ast.add(new While(((StatementContext) _localctx).T.getLine(), ((StatementContext) _localctx).T.getCharPositionInLine() + 1, ((StatementContext) _localctx).ex1.ast, ((StatementContext) _localctx).b1.ast));

                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(108);
                    ((StatementContext) _localctx).fi = functionInvocation();
                    setState(109);
                    match(T__0);

                    _localctx.ast.add(((StatementContext) _localctx).fi.ast);

                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        return expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
        ExpressionContext _prevctx = _localctx;
        int _startState = 6;
        enterRecursionRule(_localctx, 6, RULE_expression, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(145);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                    case 1: {
                        setState(115);
                        ((ExpressionContext) _localctx).ID = match(ID);

                        ((ExpressionContext) _localctx).ast = new Variable(((ExpressionContext) _localctx).ID.getLine(), ((ExpressionContext) _localctx).ID.getCharPositionInLine() + 1, (((ExpressionContext) _localctx).ID != null ? ((ExpressionContext) _localctx).ID.getText() : null));

                    }
                    break;
                    case 2: {
                        setState(117);
                        ((ExpressionContext) _localctx).INT_CONSTANT = match(INT_CONSTANT);

                        ((ExpressionContext) _localctx).ast = new IntLiteral(((ExpressionContext) _localctx).INT_CONSTANT.getLine(),
                                ((ExpressionContext) _localctx).INT_CONSTANT.getCharPositionInLine() + 1, LexerHelper.lexemeToInt((((ExpressionContext) _localctx).INT_CONSTANT != null ? ((ExpressionContext) _localctx).INT_CONSTANT.getText() : null)));

                    }
                    break;
                    case 3: {
                        setState(119);
                        ((ExpressionContext) _localctx).CHAR_CONSTANT = match(CHAR_CONSTANT);

                        ((ExpressionContext) _localctx).ast = new CharLiteral(((ExpressionContext) _localctx).CHAR_CONSTANT.getLine(),
                                ((ExpressionContext) _localctx).CHAR_CONSTANT.getCharPositionInLine() + 1, LexerHelper.lexemeToChar((((ExpressionContext) _localctx).CHAR_CONSTANT != null ? ((ExpressionContext) _localctx).CHAR_CONSTANT.getText() : null)));

                    }
                    break;
                    case 4: {
                        setState(121);
                        ((ExpressionContext) _localctx).REAL_CONSTANT = match(REAL_CONSTANT);

                        ((ExpressionContext) _localctx).ast = new RealLiteral(((ExpressionContext) _localctx).REAL_CONSTANT.getLine(),
                                ((ExpressionContext) _localctx).REAL_CONSTANT.getCharPositionInLine() + 1, LexerHelper.lexemeToReal((((ExpressionContext) _localctx).REAL_CONSTANT != null ? ((ExpressionContext) _localctx).REAL_CONSTANT.getText() : null)));

                    }
                    break;
                    case 5: {
                        setState(123);
                        match(T__3);
                        setState(124);
                        ((ExpressionContext) _localctx).e1 = expression(0);
                        setState(125);
                        match(T__4);
                        ((ExpressionContext) _localctx).ast = ((ExpressionContext) _localctx).e1.ast;
                    }
                    break;
                    case 6: {
                        setState(128);
                        ((ExpressionContext) _localctx).fi = functionInvocation();

                        ((ExpressionContext) _localctx).ast = ((ExpressionContext) _localctx).fi.ast;

                    }
                    break;
                    case 7: {
                        setState(131);
                        ((ExpressionContext) _localctx).T = match(T__3);
                        setState(132);
                        ((ExpressionContext) _localctx).tp = type();
                        setState(133);
                        match(T__4);
                        setState(134);
                        ((ExpressionContext) _localctx).ex1 = expression(7);

                        ((ExpressionContext) _localctx).ast = new Cast(((ExpressionContext) _localctx).T.getLine(), ((ExpressionContext) _localctx).T.getCharPositionInLine() + 1, ((ExpressionContext) _localctx).ex1.ast, ((ExpressionContext) _localctx).tp.ast);

                    }
                    break;
                    case 8: {
                        setState(137);
                        match(T__18);
                        setState(138);
                        ((ExpressionContext) _localctx).ex1 = expression(6);

                        ((ExpressionContext) _localctx).ast = new UnaryMinus(((ExpressionContext) _localctx).ex1.ast.getLine(), ((ExpressionContext) _localctx).ex1.ast.getColumn(), ((ExpressionContext) _localctx).ex1.ast);

                    }
                    break;
                    case 9: {
                        setState(141);
                        match(T__19);
                        setState(142);
                        ((ExpressionContext) _localctx).ex1 = expression(5);

                        ((ExpressionContext) _localctx).ast = new UnaryNot(((ExpressionContext) _localctx).ex1.ast.getLine(), ((ExpressionContext) _localctx).ex1.ast.getColumn(), ((ExpressionContext) _localctx).ex1.ast);

                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(179);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(177);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 7, _ctx)) {
                                case 1: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    _localctx.ex1 = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(147);
                                    if (!(precpred(_ctx, 4)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 4)");
                                    setState(148);
                                    ((ExpressionContext) _localctx).OP = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0)) {
                                        ((ExpressionContext) _localctx).OP = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                        _errHandler.reportMatch(this);
                                        consume();
                                    }
                                    setState(149);
                                    ((ExpressionContext) _localctx).ex2 = expression(5);

                                    ((ExpressionContext) _localctx).ast = new Arithmetic(((ExpressionContext) _localctx).ex1.ast.getLine(), ((ExpressionContext) _localctx).ex1.ast.getColumn(), ((ExpressionContext) _localctx).ex1.ast, ((ExpressionContext) _localctx).ex2.ast, (((ExpressionContext) _localctx).OP != null ? ((ExpressionContext) _localctx).OP.getText() : null));

                                }
                                break;
                                case 2: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    _localctx.ex1 = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(152);
                                    if (!(precpred(_ctx, 3)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 3)");
                                    setState(153);
                                    ((ExpressionContext) _localctx).OP = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(_la == T__18 || _la == T__23)) {
                                        ((ExpressionContext) _localctx).OP = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                        _errHandler.reportMatch(this);
                                        consume();
                                    }
                                    setState(154);
                                    ((ExpressionContext) _localctx).ex2 = expression(4);

                                    ((ExpressionContext) _localctx).ast = new Arithmetic(((ExpressionContext) _localctx).ex1.ast.getLine(), ((ExpressionContext) _localctx).ex1.ast.getColumn(), ((ExpressionContext) _localctx).ex1.ast, ((ExpressionContext) _localctx).ex2.ast, (((ExpressionContext) _localctx).OP != null ? ((ExpressionContext) _localctx).OP.getText() : null));

                                }
                                break;
                                case 3: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    _localctx.ex1 = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(157);
                                    if (!(precpred(_ctx, 2)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 2)");
                                    setState(158);
                                    ((ExpressionContext) _localctx).OP = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(((_la) & ~0x3f) == 0 && ((1L << _la) & 2113929216L) != 0)) {
                                        ((ExpressionContext) _localctx).OP = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                        _errHandler.reportMatch(this);
                                        consume();
                                    }
                                    setState(159);
                                    ((ExpressionContext) _localctx).ex2 = expression(3);

                                    ((ExpressionContext) _localctx).ast = new Comparison(((ExpressionContext) _localctx).ex1.ast.getLine(), ((ExpressionContext) _localctx).ex1.ast.getColumn(), ((ExpressionContext) _localctx).ex1.ast, ((ExpressionContext) _localctx).ex2.ast, (((ExpressionContext) _localctx).OP != null ? ((ExpressionContext) _localctx).OP.getText() : null));

                                }
                                break;
                                case 4: {
                                    _localctx = new ExpressionContext(_parentctx, _parentState);
                                    _localctx.ex1 = _prevctx;
                                    pushNewRecursionContext(_localctx, _startState, RULE_expression);
                                    setState(162);
                                    if (!(precpred(_ctx, 1)))
                                        throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                    setState(163);
                                    ((ExpressionContext) _localctx).OP = _input.LT(1);
                                    _la = _input.LA(1);
                                    if (!(_la == T__30 || _la == T__31)) {
                                        ((ExpressionContext) _localctx).OP = (Token) _errHandler.recoverInline(this);
                                    } else {
                                        if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                        _errHandler.reportMatch(this);
                                        consume();
                                    }
                                    setState(164);
                                    ((ExpressionContext) _localctx).ex2 = expression(2);

                                    ((ExpressionContext) _localctx).ast = new Logical(((ExpressionContext) _localctx).ex1.ast.getLine(), ((ExpressionContext) _localctx).ex1.ast.getColumn(), ((ExpressionContext) _localctx).ex1.ast, ((ExpressionContext) _localctx).ex2.ast, (((ExpressionContext) _localctx).OP != null ? ((ExpressionContext) _localctx).OP.getText() : null));
